VOTable parsing overhaul.  VOElement now implements org.w3c.dom.Element, so you are playing with an actual DOM, not a DOM-like covering laid over a DOM. (Well actually, it is a covering laid over a DOM, but this is not apparent from the interface).